syntax = "proto3";

package temporal.server.chasm.lib.stream.proto.v1;

option go_package = "go.temporal.io/server/chasm/lib/stream/gen/streampb;streampb";

message StreamState {
}